# rust-test

http/: Cargo.toml
http/src/: httprequest.rs  httpresponse.rs
httpserver/: Cargo.toml
httpserver/data/: orders.json
httpserver/public/: health.html  index.html  style.css
httpserver/src/: handler.rs  main.rs  router.rs  server.rs
tcpclient/: Cargo.toml
tcpclient/src/: main.rs
tcpserver/: Cargo.toml
tcpserver/src/: main.rs
