[package]
name = "httpserver"
version = "0.1.0"
authors = ["yuxin <v-yuxin@shuwen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = { path = '../http'}
serde = { version="1.0.131", features=["derive"] }
serde_json = "1.0.72"
